--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
-    <title>Nguyen Hong Duc</title>
+    <title>Nguyễn Hồng Đức - Profile</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
